<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.root.cardsuitprediction2.ChooseASuit">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/suitView"
            android:id="@+id/suittextview"
            android:textAlignment="center"
            android:textSize="25sp"
            android:visibility="invisible"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/clubsButtonText"
            android:id="@+id/clubsbutton"
            android:layout_below="@+id/suittextview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="92dp"
            android:layout_weight="5"
            android:alpha="0" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/resetbutton"
            android:alpha="0"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/heartsImageView"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:src="@drawable/hearts"
        android:contentDescription="@string/heartsImageViewDescription" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/diamondsImageView"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:src="@drawable/diamonds"
        android:contentDescription="@string/diamondsImageViewDescription" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spadesImageView"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:src="@drawable/spades"
        android:contentDescription="@string/spadesImageViewDescription" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clubsImageView"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:src="@drawable/clubs"
        android:contentDescription="@string/clubsImageViewDescription" />

</RelativeLayout>
